# aakashdm

./: README.md  pyproject.toml
aakashdm/: __init__.py  database.py  pdf.py  sessionizer.py  utils.py
aakashdm/cli/: downloader.py  main.py  server.py  sessions.py  tests.py
aakashdm/server/: __init__.py  routes.py
aakashdm/server/static/css/: style.css
aakashdm/server/static/js/: index.js
aakashdm/server/templates/: chapter.html  index.html  question.html
