[tool.poetry]
name = "aakashdm"
version = "0.3.0"
description = "Download and remove DRM from Aakash Target PDFs"
authors = ["Harsh Sharma <goharsh007@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
  { include = "aakashdm" },
]

[tool.poetry.scripts]
aakashdm = "aakashdm.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
myaakash = { git = "https://github.com/codelif/myaakash", branch = "master"}
pikepdf = "^8.13.0"
click = "^8.1.7"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
